...
    "message": "Welcome back"
  },
  "logInToContinue": {
    "message": "Log in to continue learning."
  },
  "forgotPassword": {
    "message": "Forgot password?"
  },
  "signUp": {
    "message": "Sign up"
  },
  "dontHaveAccount": {
    "message": "Don't have an account?"
...
